--- a/index.html
+++ b/index.html
@@ -282,6 +282,27 @@
 							</div>
 						</div>
 					</div>
+
+					<!-- CRM System Project -->
+					<div class="col-md-6 col-lg-4">
+						<div class="card h-100 border-0 shadow-sm">
+							<div class="card-body">
+								<h5 class="card-title">CRM Sistem</h5>
+								<p class="card-text">
+									Sistem za upravljanje odnosima sa klijentima sa modulima za
+									kontakte, sastanke i prodaju.
+								</p>
+								<div class="d-flex gap-2 mb-3">
+									<span class="badge bg-primary">PHP</span>
+									<span class="badge bg-secondary">MySQL</span>
+									<span class="badge bg-info">Bootstrap</span>
+								</div>
+								<a href="CRM/index.php" class="btn btn-outline-primary w-100"
+									>Pogledaj Projekat</a
+								>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
