--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 								<h5 class="card-title">Time Calculator</h5>
 								<p class="card-text">
 									Kalkulator za računanje vremena sa opcijama za izračunavanje
-									unapred i unazad, plus funkcionalnost alarma.
+									plus funkcionalnost alarma.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML</span>
