--- a/index.html
+++ b/index.html
@@ -359,6 +359,31 @@
 						</div>
 					</div>
 
+					<!-- Filmovi Project -->
+					<div class="col-md-6 col-lg-4">
+						<div class="card h-100 border-0 shadow-sm">
+							<div class="card-body">
+								<h5 class="card-title">Filmovi</h5>
+								<p class="card-text">
+									Web aplikacija za streaming filmova sa video player-om koji
+									podržava više streaming servisa.
+								</p>
+								<div class="d-flex gap-2 mb-3">
+									<span class="badge bg-primary">PHP</span>
+									<span class="badge bg-secondary">MySQL</span>
+									<span class="badge bg-info">Bootstrap</span>
+									<span class="badge bg-warning">JavaScript</span>
+								</div>
+								<a
+									href="Filmovi/index.php"
+									class="btn btn-outline-primary w-100"
+									target="_blank"
+									>Pogledaj Projekat</a
+								>
+							</div>
+						</div>
+					</div>
+
 					<!-- Site Analytics Project -->
 					<div class="col-md-6 col-lg-4">
 						<div class="card h-100 border-0 shadow-sm">
