--- a/index.html
+++ b/index.html
@@ -391,8 +391,7 @@
 								<h5 class="card-title">Site Analytics</h5>
 								<p class="card-text">
 									Interaktivna kontrolna tabla za praćenje web analitike sa
-									prikazom statistike posetilaca, ponašanja korisnika i izvora
-									saobraćaja.
+									prikazom statistike posetilaca.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">PHP</span>
