--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 									<span class="badge bg-primary">PHP</span>
 									<span class="badge bg-secondary">MySQL</span>
 									<span class="badge bg-info">JavaScript</span>
-									
+									<span class="badge bg-warning">Chart.js</span>
 								</div>
 								<a
 									href="site-analytics/websites.php"
@@ -405,6 +405,27 @@
 									target="_blank"
 									>Pogledaj Projekat</a
 								>
+							</div>
+						</div>
+					</div>
+
+					<!-- Pravoslavni Kalendar Project -->
+					<div class="col-md-6 col-lg-4">
+						<div class="card h-100 border-0 shadow-sm">
+							<div class="card-body">
+								<h5 class="card-title">Pravoslavni Kalendar</h5>
+								<p class="card-text">
+									Digitalni pravoslavni kalendar sa pregledom praznika, postova i svetaca za svaki dan u godini.
+								</p>
+								<div class="d-flex gap-2 mb-3">
+									<span class="badge bg-primary">PHP</span>
+									<span class="badge bg-secondary">MySQL</span>
+									<span class="badge bg-info">Bootstrap</span>
+									<span class="badge bg-warning">JavaScript</span>
+								</div>
+								<a href="pravoslavni-kalendar/index.php" class="btn btn-outline-primary w-100" target="_blank">
+									Pogledaj Projekat
+								</a>
 							</div>
 						</div>
 					</div>
