--- a/shark-web-player/index.html
+++ b/shark-web-player/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shark Web Player</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Shark Web Player">
+    <meta property="og:description" content="Streamuj brzo. Plivaj među kvalitetom.">
+    <meta property="og:image" content="https://your-domain.com/shark-web-player/favicon/og-preview.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="https://your-domain.com/shark-web-player/">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Shark Web Player">
+    <meta name="twitter:description" content="Streamuj brzo. Plivaj među kvalitetom.">
+    <meta name="twitter:image" content="https://your-domain.com/shark-web-player/favicon/og-preview.png">
+    <link rel="icon" type="image/png" href="favicon/favicon.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
