--- a/shark-web-player/index.html
+++ b/shark-web-player/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:title" content="Shark Web Player">
     <meta name="twitter:description" content="Streamuj brzo. Plivaj među kvalitetom.">
     <meta name="twitter:image" content="./favicon/og-preview.png">
-    <link rel="icon" type="image/png" href="favicon/favicon.png">
+    <link rel="icon" type="image/png" href="favicon/og-preview.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
