--- a/shark-web-player/index.html
+++ b/shark-web-player/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Shark Web Player">
     <meta property="og:description" content="Streamuj brzo. Plivaj među kvalitetom.">
-    <meta property="og:image" content="./favicon/og-preview.png">
+    <meta property="og:image" content="./shark-web-player/favicon/og-preview.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:url" content="./">
@@ -17,7 +17,7 @@
     <meta name="twitter:title" content="Shark Web Player">
     <meta name="twitter:description" content="Streamuj brzo. Plivaj među kvalitetom.">
     <meta name="twitter:image" content="./favicon/og-preview.png">
-    <link rel="icon" type="image/png" href="favicon/og-preview.png">
+    <link rel="icon" type="image/png" href="./shark-web-player/favicon/og-preview.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
