--- a/shark-web-player/index.html
+++ b/shark-web-player/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shark Web Player</title>
-
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Shark Web Player">
     <meta property="og:description" content="Streamuj brzo. Plivaj među kvalitetom.">
-    <meta property="og:image" content="./shark-web-player/favicon/og-preview.png">
+    <meta property="og:image" content="./favicon/og-preview.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:url" content="./">
-
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Shark Web Player">
     <meta name="twitter:description" content="Streamuj brzo. Plivaj među kvalitetom.">
     <meta name="twitter:image" content="./favicon/og-preview.png">
-    <link rel="icon" type="image/png" href="./shark-web-player/favicon/favicon.png">
+    <link rel="icon" type="image/png" href="favicon/favicon.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -47,7 +47,7 @@
             </div>
             <div class="playlist" id="playlist">
                 <div class="playlist-header">Radio stanice</div>
-
+                <!-- Radio stations will be added here -->
             </div>
         </div>
         <div class="player-footer">
@@ -55,11 +55,11 @@
             <button class="footer-btn" id="delBtn">DEL</button>
             <button class="footer-btn" id="miscBtn">MISC</button>
             <button class="footer-btn" id="sortBtn">SORT</button>
-            <button class="footer-btn" id="optBtn">OPT</button>
+            <button class="footer-btn" id="infoBtn"></button>
         </div>
     </div>
 
-
+    <!-- Add Stream Dialog -->
     <div id="streamDialog" class="stream-dialog">
         <div class="dialog-content">
             <h3>Add Radio Stream</h3>
