--- a/shark-web-player/index.html
+++ b/shark-web-player/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="./favicon/og-preview.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="./">
+    <meta property="og:url" content="https://djoleajk.github.io/shark-web-player/favicon/og-preview.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Shark Web Player">
