--- a/index.html
+++ b/index.html
@@ -362,6 +362,29 @@
 						</div>
 					</div>
 
+					<!-- Univerzalni Kalkulator Project -->
+					<div class="col-md-6 col-lg-4">
+						<div class="card h-100 border-0 shadow-sm">
+							<div class="card-body">
+								<h5 class="card-title">Univerzalni Kalkulator</h5>
+								<p class="card-text">
+									Sveobuhvatna kalkulator aplikacija: osnovni, naučni, konverter jedinica, finansijski i geometrijski kalkulator.
+								</p>
+								<div class="d-flex gap-2 mb-3">
+									<span class="badge bg-primary">HTML</span>
+									<span class="badge bg-info">JavaScript</span>
+									<span class="badge bg-secondary">CSS</span>
+								</div>
+								<a
+									href="Univerzalni Kalkulator/index.html"
+									class="btn btn-outline-primary w-100"
+									target="_blank"
+									>Pogledaj Projekat</a
+								>
+							</div>
+						</div>
+					</div>
+
 					<!-- Filmovi Project -->
 					<div class="col-md-6 col-lg-4">
 						<div class="card h-100 border-0 shadow-sm">
