--- a/index.html
+++ b/index.html
@@ -475,6 +475,26 @@
 							</div>
 						</div>
 					</div>
+
+					<!-- Industrijski Kalkulator Proizvodnje Project -->
+					<div class="col-md-6 col-lg-4">
+						<div class="card h-100 border-0 shadow-sm">
+							<div class="card-body">
+								<h5 class="card-title">Industrijski Kalkulator Proizvodnje</h5>
+								<p class="card-text">
+									Kalkulator za produkciju sa više operacija: zatvaranje mine, ubadanje, peskarenje, prese Robot, Italijanka i BEM. Automatska kalkulacija vremena završetka rada.
+								</p>
+								<div class="d-flex gap-2 mb-3">
+									<span class="badge bg-primary">HTML</span>
+									<span class="badge bg-info">JavaScript</span>
+									<span class="badge bg-secondary">CSS</span>
+								</div>
+								<a href="kalkulator-proizvodnje/index.html" class="btn btn-outline-primary w-100" target="_blank">
+									Pogledaj Projekat
+								</a>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
