--- a/kalkulator-proizvodnje/index.html
+++ b/kalkulator-proizvodnje/index.html
@@ -11,22 +11,28 @@
         <h1>Industrijski Kalkulator</h1>
         <p class="subtitle">Izaberi operaciju za kalkulaciju vremena</p>
         
+        <div class="dedication-banner">
+            <div class="gift-text">
+                Poklon kolegama <strong>Kovačkog Centra</strong> od <span class="gift-author">Đorđe Živanović</span>
+            </div>
+        </div>
+        
         <div class="current-time">
             <div class="time-label">Trenutno vreme:</div>
             <div id="currentTime" class="time-display">--:--:--</div>
         </div>
 
         <div class="menu-grid">
-            <a href="zatvaranje-mine.html" class="menu-card">
-                <div class="menu-icon">🔧</div>
-                <div class="menu-title">Zatvaranje Mine</div>
-                <div class="menu-description">Kalkulacija vremena za zatvaranje</div>
-            </a>
-
             <a href="ubadanje.html" class="menu-card">
-                <div class="menu-icon">⚡</div>
+                <div class="menu-icon">🔨</div>
                 <div class="menu-title">Ubadanje</div>
                 <div class="menu-description">Kalkulacija vremena za ubadanje</div>
+            </a>
+
+            <a href="zatvaranje-mine.html" class="menu-card">
+                <div class="menu-icon">🔩</div>
+                <div class="menu-title">Zatvaranje Mine</div>
+                <div class="menu-description">Kalkulacija vremena za zatvaranje</div>
             </a>
 
             <a href="peskarenje.html" class="menu-card special">
