--- a/kalkulator-proizvodnje/italijanka.html
+++ b/kalkulator-proizvodnje/italijanka.html
@@ -13,6 +13,12 @@
         <h1>Presa "Italijanka"</h1>
         <p class="subtitle">Izračunaj vreme završetka serije</p>
         
+        <div class="dedication-banner">
+            <div class="gift-text">
+                Poklon kolegama <strong>Kovačkog Centra</strong> od <span class="gift-author">Đorđe Živanović</span>
+            </div>
+        </div>
+        
         <div class="current-time">
             <div class="time-label">Trenutno vreme:</div>
             <div id="currentTime" class="time-display">--:--:--</div>
