--- a/kalkulator-proizvodnje/peskarenje.html
+++ b/kalkulator-proizvodnje/peskarenje.html
@@ -13,6 +13,12 @@
         <h1>Peskarenje</h1>
         <p class="subtitle special-subtitle">⚠️ Radi 2 mine odjednom</p>
         
+        <div class="dedication-banner">
+            <div class="gift-text">
+                Poklon kolegama <strong>Kovačkog Centra</strong> od <span class="gift-author">Đorđe Živanović</span>
+            </div>
+        </div>
+        
         <div class="current-time">
             <div class="time-label">Trenutno vreme:</div>
             <div id="currentTime" class="time-display">--:--:--</div>
@@ -29,6 +35,12 @@
                 <label for="numberOfMines">Ukupan broj mina:</label>
                 <input type="number" id="numberOfMines" min="1" placeholder="npr. 100">
                 <small class="input-note">Broj će se automatski podeliti sa 2</small>
+            </div>
+
+            <div class="input-group bem-special">
+                <label for="startTimeInput">Početak rada (opcionalno):</label>
+                <input type="time" id="startTimeInput" class="time-input">
+                <small class="input-note">⚠️ Ostavi prazno za trenutno vreme ili unesi planirano vreme početka</small>
             </div>
 
             <button id="calculateBtn" class="btn-calculate">Izračunaj</button>
