--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Industrijski Kalkulator Proizvodnje</h5>
 								<p class="card-text">
-									Kalkulator za produkciju sa više operacija: zatvaranje mine, ubadanje, peskarenje, prese Robot, Italijanka i BEM. Automatska kalkulacija vremena završetka rada.
+									Kalkulator za produkciju sa više operacija: zatvaranje mine, ubadanje, peskarenje, prese Robot, Italijanka i BEM. Kalkulacija vremena završetka rada.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML</span>
@@ -582,3 +582,4 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
+
