--- a/kalkulator-proizvodnje/index.html
+++ b/kalkulator-proizvodnje/index.html
@@ -13,7 +13,7 @@
         
         <div class="dedication-banner">
             <div class="gift-text">
-                Poklon kolegama <strong>Kovačkog Centra</strong> od <span class="gift-author">Đorđe Živanović</span>
+                Poklon kolegama <strong>Kovačkog Centra</strong>
             </div>
         </div>
         
