--- a/kalkulator-proizvodnje/index.html
+++ b/kalkulator-proizvodnje/index.html
@@ -59,6 +59,10 @@
                 <div class="menu-description">Kalkulacija za BEM presu</div>
             </a>
         </div>
+        
+        <div class="author-footer">
+            <p>© 2025 Đorđe Živanović. All rights reserved.</p>
+        </div>
     </div>
 
     <script>
