--- a/kalkulator-proizvodnje/italijanka.html
+++ b/kalkulator-proizvodnje/italijanka.html
@@ -65,6 +65,10 @@
                 <div id="totalPieces" class="result-value">--</div>
             </div>
         </div>
+        
+        <div class="author-footer">
+            <p>© 2025 Đorđe Živanović</p>
+        </div>
     </div>
 
     <script src="italijanka.js"></script>
