--- a/kalkulator-proizvodnje/peskarenje.html
+++ b/kalkulator-proizvodnje/peskarenje.html
@@ -72,6 +72,10 @@
                 <div id="totalMines" class="result-value">--</div>
             </div>
         </div>
+        
+        <div class="author-footer">
+            <p>© 2025 Đorđe Živanović</p>
+        </div>
     </div>
 
     <script src="peskarenje.js"></script>
