--- a/kalkulator-proizvodnje/index.html
+++ b/kalkulator-proizvodnje/index.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Industrijski Kalkulator Proizvodnje</title>
+    <title>Индустријски Калкулатор Производње</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container menu-container">
-        <h1>Industrijski Kalkulator</h1>
-        <p class="subtitle">Izaberi operaciju za kalkulaciju vremena</p>
+        <h1>Индустријски Калкулатор</h1>
+        <p class="subtitle">Изабери операцију за калkulацију времена</p>
         
         <div class="dedication-banner">
             <div class="gift-text">
-                Poklon kolegama <strong>Kovačkog Centra</strong>
+                Поклон колегама <strong>Ковачког Центра</strong>
             </div>
         </div>
         
         <div class="current-time">
             <div class="time-label">
-                <span>⏰ Precizno vreme</span>
-                <span class="sync-badge" title="Sinhronizovano sa atomskim satom">🔄 Atomski sat</span>
+                <span>⏰ Прецизно време</span>
+                <span class="sync-badge" title="Синхронизовано са атомским сатом">🔄 Атомски сат</span>
             </div>
             <div id="currentTime" class="time-display">--:--:--</div>
             <div id="currentDate" class="date-display"></div>
@@ -29,38 +29,38 @@
         <div class="menu-grid">
             <a href="ubadanje.html" class="menu-card">
                 <div class="menu-icon">🔨</div>
-                <div class="menu-title">Ubadanje</div>
-                <div class="menu-description">Kalkulacija vremena za ubadanje</div>
+                <div class="menu-title">Убадање</div>
+                <div class="menu-description">Калкулација времена за убадање</div>
             </a>
 
             <a href="zatvaranje-mine.html" class="menu-card">
                 <div class="menu-icon">🔩</div>
-                <div class="menu-title">Zatvaranje Mine</div>
-                <div class="menu-description">Kalkulacija vremena za zatvaranje</div>
+                <div class="menu-title">Затварање Мине</div>
+                <div class="menu-description">Калкулација времена за затварање</div>
             </a>
 
             <a href="peskarenje.html" class="menu-card special">
                 <div class="menu-icon">💨</div>
-                <div class="menu-title">Peskarenje</div>
-                <div class="menu-description">2 mine odjednom</div>
+                <div class="menu-title">Пескарење</div>
+                <div class="menu-description">2 мине одједном</div>
             </a>
 
             <a href="robot.html" class="menu-card">
                 <div class="menu-icon">🤖</div>
-                <div class="menu-title">Presa "Robot"</div>
-                <div class="menu-description">Kalkulacija za Robot presu</div>
+                <div class="menu-title">Преса "Робот"</div>
+                <div class="menu-description">Калкулација за Робот пресу</div>
             </a>
 
             <a href="italijanka.html" class="menu-card">
                 <div class="menu-icon">🇮🇹</div>
-                <div class="menu-title">Presa "Italijanka"</div>
-                <div class="menu-description">Kalkulacija za Italijanku</div>
+                <div class="menu-title">Преса "Италијанка"</div>
+                <div class="menu-description">Калкулација за Италијанку</div>
             </a>
 
             <a href="bem.html" class="menu-card">
                 <div class="menu-icon">⚙️</div>
-                <div class="menu-title">Presa "BEM"</div>
-                <div class="menu-description">Kalkulacija za BEM presu</div>
+                <div class="menu-title">Преса "БЕМ"</div>
+                <div class="menu-description">Калкулација за БЕМ пресу</div>
             </a>
         </div>
 
