--- a/kalkulator-proizvodnje/index.html
+++ b/kalkulator-proizvodnje/index.html
@@ -18,22 +18,11 @@
         </div>
         
         <div class="current-time">
-            <div class="time-row">
-                <div class="time-left">
-                    <div id="currentDate" class="date-display"></div>
-                </div>
-                <div class="time-center">
-                    <div id="currentTime" class="time-display">--:--:--</div>
-                    <span class="sync-badge" title="Синхронизовано са атомским сатом">🔄 Атомски сат</span>
-                </div>
-                <div class="time-right">
-                    <span class="temp-badge" id="currentTemp" title="Тренутна температура">
-                        <span class="temp-icon">🌡️</span>
-                        <span class="temp-value">--°C</span>
-                        <span class="temp-location">Ваљево</span>
-                    </span>
-                </div>
+            <div class="time-label">
+                <span class="sync-badge" title="Синхронизовано са атомским сатом">🔄 Атомски сат</span>
             </div>
+            <div id="currentTime" class="time-display">--:--:--</div>
+            <div id="currentDate" class="date-display"></div>
         </div>
 
         <div class="menu-grid">
