--- a/kalkulator-proizvodnje/bem.html
+++ b/kalkulator-proizvodnje/bem.html
@@ -74,6 +74,8 @@
     </div>
 
     <script src="time-sync.js"></script>
+    <script src="history-manager.js"></script>
+    <script src="notifications.js"></script>
     <script src="bem.js"></script>
 </body>
 </html>
