--- a/kalkulator-proizvodnje/index.html
+++ b/kalkulator-proizvodnje/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Индустријски Калкулатор Производње</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#667eea">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Калкулатор">
 </head>
 <body>
     <div class="container menu-container">
@@ -23,6 +28,19 @@
             </div>
             <div id="currentTime" class="time-display">--:--:--</div>
             <div id="currentDate" class="date-display"></div>
+        </div>
+
+        <!-- Istorija i notifikacije dugmići -->
+        <div class="quick-actions">
+            <a href="history.html" class="action-btn history-btn" title="Преглед историје калкулација">
+                <span class="action-icon">📊</span>
+                <span class="action-text">Историја</span>
+                <span id="historyCount" class="badge">0</span>
+            </a>
+            <button id="notificationToggle" class="action-btn notification-btn" title="Омогући/онемогући нотификације">
+                <span class="action-icon">🔔</span>
+                <span class="action-text">Нотификације</span>
+            </button>
         </div>
 
         <div class="menu-grid">
@@ -74,12 +92,56 @@
 
     <script src="time-sync.js"></script>
     <script src="weather.js"></script>
+    <script src="history-manager.js"></script>
+    <script src="notifications.js"></script>
     <script>
         // Pokreni sat sa prikazom datuma
         atomicClock.startClock('currentTime', { 
             showDate: true, 
             dateElementId: 'currentDate' 
         });
+
+        // Ažuriraj broj kalkulacija u istoriji
+        function updateHistoryCount() {
+            const history = historyManager.getHistory();
+            const countElement = document.getElementById('historyCount');
+            if (countElement) {
+                countElement.textContent = history.length;
+                countElement.style.display = history.length > 0 ? 'inline-block' : 'none';
+            }
+        }
+
+        // Toggle notifikacija
+        document.getElementById('notificationToggle').addEventListener('click', async () => {
+            if (notificationManager.areNotificationsEnabled()) {
+                // Već omogućeno, prikaži poruku
+                alert('Нотификације су већ омогућене! ✓\n\nПримићете обавештења када се калкулација заврши.');
+            } else {
+                // Traži dozvolu
+                const granted = await notificationManager.requestPermission();
+                if (granted) {
+                    alert('Нотификације омогућене! ✓');
+                } else {
+                    alert('Нотификације нису дозвољене.\n\nУколико желите да их омогућите, идите у подешавања прегледача и дозволите нотификације за ову страницу.');
+                }
+            }
+        });
+
+        // Inicijalno ažuriranje
+        updateHistoryCount();
+
+        // Registruj Service Worker za PWA
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('./service-worker.js')
+                    .then(registration => {
+                        console.log('✓ Service Worker регистрован:', registration.scope);
+                    })
+                    .catch(error => {
+                        console.log('Service Worker грешка:', error);
+                    });
+            });
+        }
     </script>
 </body>
 </html>
