--- a/kalkulator-proizvodnje/italijanka.html
+++ b/kalkulator-proizvodnje/italijanka.html
@@ -74,6 +74,8 @@
     </div>
 
     <script src="time-sync.js"></script>
+    <script src="history-manager.js"></script>
+    <script src="notifications.js"></script>
     <script src="italijanka.js"></script>
 </body>
 </html>
