--- a/kalkulator-proizvodnje/peskarenje.html
+++ b/kalkulator-proizvodnje/peskarenje.html
@@ -81,6 +81,8 @@
     </div>
 
     <script src="time-sync.js"></script>
+    <script src="history-manager.js"></script>
+    <script src="notifications.js"></script>
     <script src="peskarenje.js"></script>
 </body>
 </html>
