Change title from 'Индустријски Калкулатор' to 'Калкулатор Смена'

--- a/kalkulator-proizvodnje/index.html
+++ b/kalkulator-proizvodnje/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="container menu-container">
-        <h1>Индустријски Калкулатор</h1>
+        <h1>Калкулатор Смена</h1>
         <p class="subtitle">Изабери операцију за калkulацију времена</p>
         
         <div class="dedication-banner">
