--- a/kalkulator-proizvodnje/index.html
+++ b/kalkulator-proizvodnje/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Индустријски Калкулатор Производње</title>
+    <title>Калкулатор Времена</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="container menu-container">
-        <h1>Калкулатор Смена</h1>
+        <h1>Калкулатор Времена</h1>
         <p class="subtitle">Изабери операцију за калkulацију времена</p>
         
         <div class="dedication-banner">
