--- a/kalkulator-proizvodnje/ubadanje.html
+++ b/kalkulator-proizvodnje/ubadanje.html
@@ -77,6 +77,7 @@
     <script src="time-sync.js"></script>
     <script src="history-manager.js"></script>
     <script src="notifications.js"></script>
+    <script src="audio-notifications.js"></script>
     <script src="ubadanje.js"></script>
 </body>
 </html>
