--- a/kalkulator-proizvodnje/bem.html
+++ b/kalkulator-proizvodnje/bem.html
@@ -77,6 +77,7 @@
     <script src="time-sync.js"></script>
     <script src="history-manager.js"></script>
     <script src="notifications.js"></script>
+    <script src="audio-notifications.js"></script>
     <script src="bem.js"></script>
 </body>
 </html>
