--- a/kalkulator-proizvodnje/peskarenje.html
+++ b/kalkulator-proizvodnje/peskarenje.html
@@ -84,6 +84,7 @@
     <script src="time-sync.js"></script>
     <script src="history-manager.js"></script>
     <script src="notifications.js"></script>
+    <script src="audio-notifications.js"></script>
     <script src="peskarenje.js"></script>
 </body>
 </html>
