--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 									<span class="badge bg-info">Bootstrap</span>
 								</div>
 								<a
-									href="todo/index.php"
+									href="TODO/Index.html"
 									class="btn btn-outline-primary w-100"
 									target="_blank"
 									>Pogledaj Projekat</a
@@ -582,3 +582,4 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
+
