--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 									<span class="badge bg-info">Bootstrap</span>
 								</div>
 								<a
-									href="Sistem_za_rezervacije/index.php"
+									href="Sistem_za_rezervacije/index.html"
 									class="btn btn-outline-primary w-100"
 									target="_blank"
 								>
@@ -582,5 +582,6 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
+
 
 
